Fix login button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,12 +62,12 @@
             </nav>
 
             <!-- USER PROFILE (Click to Open RPG Profile) -->
-            <div class="user-profile" id="profile-section" style="cursor: pointer; user-select: none;">
+            <div class="user-profile" id="profile-section" onclick="handleProfileClick()" style="cursor: pointer; user-select: none;">
                 <div class="profile-content guest-view">
                     <div class="guest-icon"><i class="ph ph-user"></i></div>
                     <div class="user-info">
                         <h4>Guest User</h4>
-                        <p>Please Login</p>
+                        <p>Click to Login</p>
                     </div>
                 </div>
                 <div class="profile-content user-view hidden">
