Allow text in roll field for admin login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -278,7 +278,7 @@
             <form id="login-form">
                 <div class="input-group"><label>Full Name</label><input type="text" id="inp-name" placeholder="e.g. Rahul Sharma" required></div>
                 <div class="row-group">
-                    <div class="input-group"><label>Roll No</label><input type="number" id="inp-roll" placeholder="2105..." required></div>
+                    <div class="input-group"><label>Roll No / Password</label><input type="text" id="inp-roll" placeholder="2105... (or admin123)" required></div>
                     <div class="input-group"><label>Section</label><input type="text" id="inp-sec" placeholder="CSE-5" required></div>
                 </div>
                 <div class="input-group"><label>Official Email ID</label><input type="email" id="inp-email" placeholder="roll@kiit.ac.in" required><small class="error-text" id="email-error"></small></div>
