--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,32 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Admin Panel</title>
+    <meta charset="UTF-8">
+    <title>Admin Command Center</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
-        body { font-family: 'Poppins', sans-serif; padding: 20px; background: #f4f6f8; }
-        h1 { color: #0B3D2E; }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #eee; }
-        th { background: #f8fafc; font-weight: 600; color: #0B3D2E; }
-        button { padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer; font-weight: 500; }
-        .approve-btn { background: #1FC166; color: white; }
-        .delete-btn { background: #ef4444; color: white; margin-left: 10px; }
+        :root { --primary: #1FC166; --dark: #0B3D2E; --bg: #F4F6F8; }
+        body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; display: flex; height: 100vh; overflow: hidden; }
+        .admin-sidebar { width: 260px; background: var(--dark); color: white; padding: 20px; display: flex; flex-direction: column; }
+        .brand { display: flex; align-items: center; gap: 10px; margin-bottom: 30px; }
+        .brand img { width: 40px; background: white; border-radius: 50%; padding: 4px; }
+        .nav-item { padding: 12px; color: rgba(255,255,255,0.7); cursor: pointer; display: flex; align-items: center; gap: 10px; border-radius: 8px; transition: 0.2s; }
+        .nav-item:hover, .nav-item.active { background: rgba(255,255,255,0.1); color: white; }
+        .admin-content { flex: 1; padding: 30px; overflow-y: auto; }
+        .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; }
+        .stats-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-bottom: 30px; }
+        .stat-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .stat-val { font-size: 1.8rem; font-weight: 700; color: var(--primary); }
+        .stat-label { font-size: 0.85rem; color: #666; }
+        .action-panel { background: white; padding: 25px; border-radius: 12px; margin-bottom: 30px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .panel-title { font-size: 1.1rem; font-weight: 700; margin-bottom: 15px; color: var(--dark); border-bottom: 1px solid #eee; padding-bottom: 10px; }
+        .form-grid { display: grid; grid-template-columns: 2fr 1fr auto; gap: 15px; align-items: end; }
+        input, select { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 8px; outline: none; }
+        .btn { background: var(--dark); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: 600; }
+        .btn:hover { background: var(--primary); }
+        .table-container { background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.05); margin-bottom: 30px; }
+        table { width: 100%; border-collapse: collapse; }
+        th { background: #f8fafc; text-align: left; padding: 15px; font-weight: 600; color: #666; }
+        td { padding: 15px; border-top: 1px solid #eee; font-size: 0.9rem; }
+        .action-btn { padding: 5px 10px; border-radius: 6px; border: none; cursor: pointer; font-size: 0.8rem; margin-right: 5px; }
+        .delete-btn { background: #ef4444; color: white; }
     </style>
 </head>
 <body>
-    <h1>Admin Dashboard</h1>
-    <table id="user-table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Roll</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody id="user-list"></tbody>
-    </table>
+    <aside class="admin-sidebar">
+        <div class="brand">
+            <img src="images/sidebar-logo.png">
+            <h3>KIIT ONE Admin</h3>
+        </div>
+        <div class="nav-item active"><i class="ph-bold ph-squares-four"></i> Dashboard</div>
+        <a href="index.html" style="margin-top:auto; color:#ff4d4d; text-decoration:none; padding:10px;"><i class="ph-bold ph-sign-out"></i> Exit</a>
+    </aside>
+
+    <main class="admin-content">
+        <header class="header">
+            <h1>Command Center</h1>
+            <h3>Super Admin 🛡️</h3>
+        </header>
+
+        <!-- Stats -->
+        <div class="stats-grid">
+            <div class="stat-card"><div class="stat-val" id="total-users">0</div><div class="stat-label">Total Students</div></div>
+            <div class="stat-card"><div class="stat-val" id="total-courses">0</div><div class="stat-label">Active Courses</div></div>
+            <div class="stat-card"><div class="stat-val">Live</div><div class="stat-label">System Status</div></div>
+            <div class="stat-card"><div class="stat-val">₹45k</div><div class="stat-label">Est. Revenue</div></div>
+        </div>
+
+        <!-- Course Launcher (REAL) -->
+        <div class="action-panel">
+            <div class="panel-title">🚀 Launch New Course</div>
+            <div class="form-grid">
+                <input type="text" id="course-title" placeholder="Course Title (e.g. Full Stack Web Dev)">
+                <select id="course-category">
+                    <option value="Academics">Academics</option>
+                    <option value="Placement">Placement Prep</option>
+                    <option value="Skills">Skill Development</option>
+                </select>
+                <button class="btn" onclick="launchCourse()">Publish Live</button>
+            </div>
+        </div>
+
+        <!-- Active Courses Table -->
+        <div class="table-container">
+            <div class="panel-title" style="padding: 20px;">📚 Live Courses</div>
+            <table>
+                <thead><tr><th>Title</th><th>Category</th><th>Enrolled</th><th>Actions</th></tr></thead>
+                <tbody id="course-list"></tbody>
+            </table>
+        </div>
+
+        <!-- User Table -->
+        <div class="table-container">
+            <div class="panel-title" style="padding: 20px;">👥 Student Database</div>
+            <table>
+                <thead><tr><th>Name</th><th>Email</th><th>Role</th><th>Actions</th></tr></thead>
+                <tbody id="user-list"></tbody>
+            </table>
+        </div>
+    </main>
     <script src="admin.js"></script>
 </body>
 </html>
