--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,17 @@
 
             <div class="hybrid-layout">
                 <div class="utility-stack">
+                    <!-- NEW: LIVE COURSES SECTION -->
+                    <div class="card widget-card">
+                        <div class="card-head">
+                            <h3><i class="ph-fill ph-graduation-cap text-purple"></i> Live Courses</h3>
+                        </div>
+                        <div class="class-list" id="student-course-list">
+                            <div style="padding:10px; text-align:center; color:#888;">Loading courses...</div>
+                        </div>
+                    </div>
+
+                    <!-- Today's Classes -->
                     <div class="card widget-card">
                         <div class="card-head"><h3><i class="ph-fill ph-chalkboard-teacher text-green"></i> Today's Classes</h3></div>
                         <div class="class-list">
@@ -120,7 +131,13 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </main><div class="card widget-card">
+                        <div class="card-head"><h3><i class="ph-fill ph-chalkboard-teacher text-green"></i> Today's Classes</h3></div>
+                        <div class="class-list">
+                            <div class="class-item active"><div class="time">09:00</div><div class="info"><strong>Data Structures</strong><span>Room C-201</span></div></div>
+                            <div class="class-item"><div class="time">11:00</div><div class="info"><strong>Operating Systems</strong><span>Room C-204</span></div></div>
+                        </div>
+                    </div>
     </div>
 
     <!-- LOGIN MODAL -->
