Fix mobile extras and desktop grid

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,9 @@
             </header>
 
             <!-- RIGHT SIDEBAR TOGGLE (Mobile Only) -->
-            <div class="right-sidebar-toggle" onclick="toggleRightSidebar()"><i class="ph-bold ph-caret-left"></i> Extras</div>
+            <div class="right-sidebar-toggle" id="mobile-extras-btn" onclick="toggleRightSidebar()">
+                <i class="ph-bold ph-calendar-check"></i>
+            </div>
 
             <section class="hero-banner">
                 <div class="hero-text">
@@ -113,7 +115,7 @@
 
             <div class="hybrid-layout">
                 <div class="utility-stack" id="right-sidebar">
-                    <div class="close-sidebar-btn" style="display:none;" onclick="toggleRightSidebar()">✕</div>
+    <div class="close-sidebar-btn" onclick="toggleRightSidebar()">Close ✕</div>
                     <!-- REAL: LIVE COURSES SECTION -->
                     <div class="card widget-card">
                         <div class="card-head">
