--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,18 +123,20 @@
             </section>
 
             <div class="hybrid-layout">
-    <!-- CENTER FEED (Courses + Timetable + Social) - Now full width -->
+    <!-- CENTER FEED - Now full width, only Featured Courses -->
     <div class="community-feed" style="flex: 1;">
         
-        <!-- 1. LIVE COURSES GRID (now full-width) -->
-<div class="card widget-card" style="margin-bottom: 20px;">
-    <div class="card-head">
-        <h3><i class="ph-fill ph-graduation-cap text-purple"></i> Featured Courses</h3>
+        <!-- 1. LIVE COURSES GRID (full-width) -->
+        <div class="card widget-card" style="margin-bottom: 20px;">
+            <div class="card-head">
+                <h3><i class="ph-fill ph-graduation-cap text-purple"></i> Featured Courses</h3>
+            </div>
+            <div class="class-list" id="student-course-list">
+                <div style="padding:10px; text-align:center; color:#888;">Loading courses...</div>
+            </div>
+        </div>
     </div>
-    <div class="class-list" id="student-course-list">
-        <div style="padding:10px; text-align:center; color:#888;">Loading courses...</div>
-    </div>
-</div>
+
 
         
 
