Update login modal with tabs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,25 +169,48 @@
                 <p id="login-desc" style="font-size: 0.9rem; color: #666;">Enter details to access.</p>
             </div>
             <form id="login-form">
-                <!-- NORMAL FIELDS -->
-                <div id="reg-fields">
-                    <div class="input-group"><label>Full Name</label><input type="text" id="inp-name" required></div>
+                <!-- LOGIN MODAL -->
+    <div class="modal-overlay" id="login-modal">
+        <div class="modal-box">
+            <div class="modal-header">
+                <div class="kiit-logo-wrapper" style="margin: 0 auto 15px auto; width: 60px; height: 60px;"><img src="images/sidebar-logo.png"></div>
+                <h2 id="modal-title">Student Login</h2>
+            </div>
+
+            <!-- TABS -->
+            <div class="auth-tabs" style="display:flex; justify-content:center; gap:10px; margin-bottom:20px;">
+                <button id="tab-login" class="tab-btn active" onclick="switchAuthTab('login')">Login</button>
+                <button id="tab-register" class="tab-btn" onclick="switchAuthTab('register')">Register</button>
+            </div>
+
+            <form id="auth-form">
+                <!-- REGISTER FIELDS (Hidden by default) -->
+                <div id="register-fields" style="display:none;">
+                    <div class="input-group"><label>Full Name</label><input type="text" id="inp-name"></div>
                     <div class="row-group">
-                        <div class="input-group"><label>Roll No / Password</label><input type="text" id="inp-roll" required></div>
-                        <div class="input-group"><label>Section</label><input type="text" id="inp-sec" required></div>
+                        <div class="input-group"><label>Roll No</label><input type="text" id="inp-roll-reg"></div>
+                        <div class="input-group"><label>Section</label><input type="text" id="inp-sec"></div>
                     </div>
-                    <div class="input-group"><label>Official Email ID</label><input type="email" id="inp-email" required></div>
                 </div>
 
-                <!-- OTP FIELD (Hidden by default) -->
+                <!-- COMMON FIELDS -->
+                <div class="input-group"><label>Official Email ID</label><input type="email" id="inp-email" required></div>
+                
+                <!-- PASSWORD FIELD -->
+                <div class="input-group" id="pass-group">
+                    <label>Password (Roll No)</label>
+                    <input type="password" id="inp-password" required>
+                </div>
+
+                <!-- OTP FIELD (Hidden) -->
                 <div id="otp-field" style="display: none; margin-bottom: 15px;">
                     <div class="input-group">
-                        <label style="color: #1FC166; font-weight: bold;">Enter OTP sent to your Email</label>
-                        <input type="text" id="inp-otp" placeholder="Ex: 123456" style="letter-spacing: 5px; text-align: center; font-size: 1.2rem;">
+                        <label style="color: #1FC166; font-weight: bold;">Enter OTP</label>
+                        <input type="text" id="inp-otp" placeholder="123456" style="letter-spacing: 5px; text-align: center; font-size: 1.2rem;">
                     </div>
                 </div>
 
-                <button type="submit" class="btn-login-submit" id="btn-submit">Access Dashboard</button>
+                <button type="submit" class="btn-login-submit" id="btn-submit">Login</button>
             </form>
         </div>
     </div>
