Add Login Register Tabs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,15 +165,6 @@
         <div class="modal-box">
             <div class="modal-header">
                 <div class="kiit-logo-wrapper" style="margin: 0 auto 15px auto; width: 60px; height: 60px;"><img src="images/sidebar-logo.png"></div>
-                <h2 id="login-title">Student Login</h2>
-                <p id="login-desc" style="font-size: 0.9rem; color: #666;">Enter details to access.</p>
-            </div>
-            <form id="login-form">
-                <!-- LOGIN MODAL -->
-    <div class="modal-overlay" id="login-modal">
-        <div class="modal-box">
-            <div class="modal-header">
-                <div class="kiit-logo-wrapper" style="margin: 0 auto 15px auto; width: 60px; height: 60px;"><img src="images/sidebar-logo.png"></div>
                 <h2 id="modal-title">Student Login</h2>
             </div>
 
@@ -198,7 +189,7 @@
                 
                 <!-- PASSWORD FIELD -->
                 <div class="input-group" id="pass-group">
-                    <label>Password (Roll No)</label>
+                    <label>Password (Roll No / Admin Pass)</label>
                     <input type="password" id="inp-password" required>
                 </div>
 
@@ -214,7 +205,6 @@
             </form>
         </div>
     </div>
-
     <!-- PROFILE MODAL -->
     <div class="modal-overlay" id="super-profile-modal">
         <div class="profile-card-container">
