--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,15 @@
         }
         @keyframes slideUp { from { transform: translateY(100%); } to { transform: translateY(0); } }
     </style>
+
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+       (function(){
+          // PASTE YOUR PUBLIC KEY BELOW INSIDE QUOTES
+          emailjs.init("G_jA3KvXFVOFqewvV");
+       })();
+    </script>
 </head>
 <body>
 
