Add Forgot Password and Fix Email Target

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -202,6 +202,10 @@
                     <input type="password" id="inp-password" required>
                 </div>
 
+                <div id="forgot-pass-link" style="text-align:right; font-size:0.8rem; margin-bottom:15px;">
+                    <a href="#" onclick="startForgotPass()" style="color:#1FC166; text-decoration:none;">Forgot Password?</a>
+                </div>
+
                 <!-- OTP FIELD (Hidden) -->
                 <div id="otp-field" style="display: none; margin-bottom: 15px;">
                     <div class="input-group">
