Fix header structure for big logo

--- a/frontend/course-details.html
+++ b/frontend/course-details.html
@@ -18,13 +18,13 @@
         /* Page Styles */
         .course-hero {
             background: linear-gradient(135deg, #0B3D2E 0%, #1FC166 100%);
-            padding: 40px;
+            padding: 25px; /* Reduced from 40px */
             border-radius: 16px;
             color: white;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 10px 30px rgba(31, 193, 102, 0.2);
-            margin-bottom: 25px;
+            box-shadow: 0 5px 20px rgba(31, 193, 102, 0.2);
+            margin-bottom: 20px;
         }
         .hero-badge { background: #FFD700; color: #000; padding: 4px 10px; border-radius: 12px; font-weight: 700; font-size: 0.75rem; text-transform: uppercase; }
         .course-layout { display: grid; grid-template-columns: 2fr 1fr; gap: 25px; align-items: start; }
